--- a/src/modules/blogs/blogs.styl
+++ b/src/modules/blogs/blogs.styl
@@ -1,76 +1,7 @@
-.yearPrograms
-  position: relative;
-  padding: 350px 0 47px
+.blogs
+  margin-bottom: 120px
   +media('md')
-    padding: 80px 0 47px
-
-  &__title
-    visibility: hidden;
-    top: -46px;
-    left: 3%;
-    position: absolute;
-    color: #ec3434;
-    line-height: 1
-    font-size: 220px;
-    font-weight: normal;
-    z-index: 2;
-    +media('md')
-      top: -69px
-      font-size: 70px
-
-    span
-      display: block;
-      margin-left: 432px;
-      margin-top: -52px;
-      font-size: 150px
-      color: #2a2727
-      +media-max-width(1400px)
-        margin-left: 170px
-
-      +media('md')
-        font-size: 46px;
-        margin-left: 20px;
-        margin-top: -10px;
-
-  //&__title
-  //  margin-bottom: 132px
-  //  +media('md')
-  //    margin-bottom: 57px
-  //
-  //  &:before // Красная полоса
-  //    width: 561px;
-  //    height: 40px;
-  //    left: 279px;
-  //    top: 52px;
-  //    z-index: -1
-  //    +media('md')
-  //      left: -391px;
-  //      top: 29px;
-  //      height: 20px;
-  //
-  //  & > span
-  //    &:after // Красный круг
-  //      width: 196px;
-  //      height: 196px;
-  //      top: -59px;
-  //      left: 191px;
-  //      +media('md')
-  //        width: 76px;
-  //        height: 76px;
-  //        top: -17px;
-  //        left: -9px;
-  //
-  //    &:before // Черная полоска
-  //      width: 100px;
-  //      height: 5px;
-  //      left: 774px;
-  //      top: 89px;
-  //      +media('md')
-  //        left: 131px;
-  //        top: 46px;
-
-  &__content
-    visibility: hidden;
+    margin-bottom: 60px
 
   &__items
     display: flex;
