--- a/src/modules/coursesList/coursesList.pug
+++ b/src/modules/coursesList/coursesList.pug
@@ -1,6 +1,5 @@
 .coursesList
-  .coursesList__header
-    .coursesList__container: span ART ПРАКТИКИ
+  .coursesList__header #[b арт-]практики
 
   .coursesList__items
     .cards
@@ -15,8 +14,7 @@
       .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
       .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
 
-  .coursesList__header
-    .coursesList__container: span ИСТОРИЯ И ТЕОРИЯ
+  .coursesList__header.center #[b история] и теория
 
   .coursesList__items
     .cards
@@ -31,8 +29,7 @@
       .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
       .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
 
-  .coursesList__header
-    .coursesList__container: span ДИЗАЙН
+  .coursesList__header.right #[b дизайн]
 
   .coursesList__items
     .cards
