--- a/src/modules/mentors/mentors.pug
+++ b/src/modules/mentors/mentors.pug
@@ -1,6 +1,6 @@
 .mentors
   .c
-    h2.title.mentors__title: span: span НАША КОМАНДА
+    h2.mentors__title НАША КОМАНДА
 
     .mentors__items
       .mentors__item
