--- a/src/modules/about/about.pug
+++ b/src/modules/about/about.pug
@@ -1,6 +1,6 @@
 .about
-  .c
-    h2.title.about__title: span: span О ШКОЛЕ
+  h2.about__title #[b о на]с
+  .cWide
     .about__text Школа #[b NEWARTDOM] собрала под своим куполом профессионалов с многолетним опытом преподавания в сфере теории и практики современного искусства. Мы предлагаем качественное профильное образование, которое вы можете получить не выходя из дома. Оно станет отличной базой для ваших последующих творческих и научных исканий.
     .about__principes
       .about__itemsHeader Наши#[br]преимущества:
