--- a/src/modules/coursesList/coursesList.styl
+++ b/src/modules/coursesList/coursesList.styl
@@ -4,44 +4,49 @@
     padding-bottom: 88px
 
   &__header
-    height: 130px
-    background: #f6f6f6
-    margin-bottom: 15px
+    //height: 130px
+    //background: #f6f6f6
+    margin-bottom: 65px
+    font-size: 115px
+    line-height: 100px
+    padding: 0 5%
     +media('md')
-      height: 70px
-      margin-bottom: 5px
+      font-size: 55px
+      line-height: 40px
+      //height: 70px
+      margin-bottom: 45px
 
-  &__container
-    margin: 0 auto
-    max-width 1560px
-    padding: 0 20px
-    font-size: 54px
-    color: #ec3434
-    height: 100%
-    display: flex;
-    align-items center
-    +media('md')
-      font-size: 26px
-
-    span
-      visibility: hidden;
-      position: relative;
-      z-index: 1
-
-      &:before
-        content: ''
-        position: absolute;
-        background: $black
-        left: -13px;
-        right: -10px;
-        bottom: 13px;
-        height: 8px;
-        z-index: -1;
-        +media('md')
-          left: -10px;
-          right: -8px;
-          bottom: 5px;
-          height: 6px;
+  //&__container
+  //  margin: 0 auto
+  //  max-width 1560px
+  //  padding: 0 20px
+  //  font-size: 54px
+  //  color: #ec3434
+  //  height: 100%
+  //  display: flex;
+  //  align-items center
+  //  +media('md')
+  //    font-size: 26px
+  //
+  //  span
+  //    visibility: hidden;
+  //    position: relative;
+  //    z-index: 1
+  //
+  //    &:before
+  //      content: ''
+  //      position: absolute;
+  //      background: $black
+  //      left: -13px;
+  //      right: -10px;
+  //      bottom: 13px;
+  //      height: 8px;
+  //      z-index: -1;
+  //      +media('md')
+  //        left: -10px;
+  //        right: -8px;
+  //        bottom: 5px;
+  //        height: 6px;
 
   &__items
     margin-bottom: 105px
