--- a/src/modules/mentors/mentors.styl
+++ b/src/modules/mentors/mentors.styl
@@ -1,46 +1,33 @@
 .mentors
-  &__title
-    margin-bottom: 162px
-    +media('md')
-      margin-bottom: 59px
-    // Красная полоса
+  +media('md')
+    margin-bottom: 100px
 
-    &:before
-      width: 1000px;
-      height: 40px;
-      right: 100%;
-      margin-right: -284px;
-      top: 53px;
-      z-index: -1
-      +media('md')
-        margin-right: -108px;
-        top: 9px;
-
-    & > span
-      // Красный круг
-
-      &:after
-        width: 180px
-        height: 180px
-        top: -52px;
-        left: 319px;
-        +media('md')
-          width: 76px
-          height: 76px
-          top: -17px;
-          left: 134px;
-
-      // Черная полоска
-
-      &:before
-        width: 130px;
-        height: 5px;
-        left: 100%
-        top: 41px;
-        margin-left: -87px;
-        +media('md')
-          top: 17px;
-          margin-left: -107px;
+  //&__title
+  //  visibility: hidden;
+  //  margin-left: -7vw
+  //  color: #ec3434;
+  //  //font-size: 220px;
+  //  font-size: 11vw;
+  //  line-height: .82
+  //  font-weight: normal;
+  //  z-index: 2;
+  //  margin-top: -80px
+  //  margin-bottom: 80px
+  //  //max-width calc(50% + 7vw - 50px)
+  //  hyphens: auto;
+  //
+  //  +media-max-width(1750px)
+  //    margin-left: 0
+  //    margin-top: -60px
+  //    font-size: 10vw
+  //  //max-width calc(50% - 50px)
+  //
+  //  +media('md')
+  //    margin-top: -20px
+  //    //margin-top: -150px
+  //    margin-bottom: 50px
+  //    font-size: 75px
+  //    max-width 100%
 
   &__item
     display: flex;
@@ -78,25 +65,25 @@
     img
       border-radius: 50%
 
-    //&:before, &:after
-    //  content: ''
-    //  position: absolute;
-    //  z-index: -1
-    //
-    //&:before
-    //  width: 130px
-    //  height: 130px
-    //  background: #ec3434
-    //  border-radius: 50%
-    //  top: -33px;
-    //  left: 80px;
-    //
-    //&:after
-    //  width: 121px
-    //  height: 5px
-    //  background: #1a1616;
-    //  top: 5px;
-    //  left: 29px;
+  //&:before, &:after
+  //  content: ''
+  //  position: absolute;
+  //  z-index: -1
+  //
+  //&:before
+  //  width: 130px
+  //  height: 130px
+  //  background: #ec3434
+  //  border-radius: 50%
+  //  top: -33px;
+  //  left: 80px;
+  //
+  //&:after
+  //  width: 121px
+  //  height: 5px
+  //  background: #1a1616;
+  //  top: 5px;
+  //  left: 29px;
 
   &__content
     padding-left: 48px
