--- a/src/modules/module/module.pug
+++ b/src/modules/module/module.pug
@@ -1,7 +1,6 @@
 .module
   .module__container
-    h1.title.module__title: span: span
-      | ВАШИ ЛУЧШИЕ 15
+    h1.module__title ВАШИ ЛУЧШИЕ 15
   .module__rows
     .module__row
       .module__container
