--- a/src/modules/module/module.styl
+++ b/src/modules/module/module.styl
@@ -10,42 +10,69 @@
     +media('md')
       padding: 0 15px
 
-  &__title
-    margin-bottom: 0;
-    +media('md')
-      margin-bottom: 0;
+  //&__title
+  //  visibility: hidden;
+  //  margin-left: -7vw
+  //  color: #ec3434;
+  //  //font-size: 220px;
+  //  font-size: 11vw;
+  //  line-height: .82
+  //  font-weight: normal;
+  //  z-index: 2;
+  //  margin-top: -80px
+  //  margin-bottom: 80px
+  //  //max-width calc(50% + 7vw - 50px)
+  //  hyphens: auto;
+  //
+  //  +media-max-width(1750px)
+  //    margin-left: 0
+  //    margin-top: -60px
+  //    font-size: 10vw
+  //  //max-width calc(50% - 50px)
+  //
+  //  +media('md')
+  //    margin-top: -20px
+  //    //margin-top: -150px
+  //    margin-bottom: 50px
+  //    font-size: 75px
+  //    max-width 100%
 
-    &:before // Красная полоса
-      width: 561px;
-      height: 40px;
-      left: 345px;
-      top: 54px;
-      z-index: -1;
-      +media('md')
-        left: 85px;
-        top: 28px;
-        height: 20px;
-        width: 215px;
-
-    & > span
-      &:after // Красный круг
-        width: 196px
-        height: 196px
-        top: -57px;
-        left: -103px;
-        +media('md')
-          width: 76px
-          height: 76px
-          top: -18px;
-          left: -47px;
-
-      &:before // Черная полоска
-        width: 100px
-        height: 5px;
-        top: 91px;
-        left: 14px;
-        +media('md')
-          content: none
+  //&__title
+  //  margin-bottom: 0;
+  //  +media('md')
+  //    margin-bottom: 0;
+  //
+  //  &:before // Красная полоса
+  //    width: 561px;
+  //    height: 40px;
+  //    left: 345px;
+  //    top: 54px;
+  //    z-index: -1;
+  //    +media('md')
+  //      left: 85px;
+  //      top: 28px;
+  //      height: 20px;
+  //      width: 215px;
+  //
+  //  & > span
+  //    &:after // Красный круг
+  //      width: 196px
+  //      height: 196px
+  //      top: -57px;
+  //      left: -103px;
+  //      +media('md')
+  //        width: 76px
+  //        height: 76px
+  //        top: -18px;
+  //        left: -47px;
+  //
+  //    &:before // Черная полоска
+  //      width: 100px
+  //      height: 5px;
+  //      top: 91px;
+  //      left: 14px;
+  //      +media('md')
+  //        content: none
 
   &__rows
     margin-top: 115px
@@ -55,21 +82,23 @@
     &--active
       & ^[0]__row:nth-child(n + 3)
         display: block;
-        //visibility: visible;
-        //opacity: 1
-        //position: relative
-        //z-index: auto;
+
+  //visibility: visible;
+  //opacity: 1
+  //position: relative
+  //z-index: auto;
 
   &__row
     position: relative;
 
     &:nth-child(n + 3)
       display: none;
-      //visibility: hidden;
-      //opacity: 0
-      //position: absolute;
-      //z-index: -1
-      //anim()
+
+    //visibility: hidden;
+    //opacity: 0
+    //position: absolute;
+    //z-index: -1
+    //anim()
 
     +media('md')
       margin-bottom: 63px
@@ -141,6 +170,7 @@
     top: 0
     left: 50%
     width: 50%
+
     &.gallery
       height: 100%
       max-height 680px
