--- a/src/modules/modules/modules.pug
+++ b/src/modules/modules/modules.pug
@@ -1,31 +1,34 @@
-.modules.cWide
-  h2.title.modules__title: span: span ОБРАЗОВАТЕЛЬНЫЕ МОДУЛИ
-  .modules__top
-    h2.modules__header
-      | УЗНАЙ ВСЕ#[br]
-      | О СОВРЕМЕННОМ#[br]
-      | ИСКУССТВЕ
-    .modules__text Наши образовательные модули построены таким образом, что дают полное   редставление о той или иной тенденции в художественной практике, а также помогают ответить на вопрос «что такое современное искусство». Вы узнаете о  ультимедиальности и интердисциплинарности, новейших практиках кураторства, а также о важнейших трендах в области художественного образования.
-  .modules__items
-    .modules__item
-      .modules__image(style='background-image: url(images/01.jpg)'): span Ваши лучшие 15
-      .modules__content: .modules__inner
-        p Мы собрали и структурировали модуль “Ваши лучшие 15" таким образом, чтобы студенты, прошедшие его, были полностью готовы к важнейшему шагу в своей жизни — выбору профессии — который будет предопределять всю их дальнейшую жизнь. Найти дело и занятие по душе — залог насыщенной и продуктивной деятельности, которая станет основой успешной карьеры и интересной жизни. В рамках занятий мы создадим общую творческую и интеллектуальную среду, где будем обсуждать проекты, задавать вопросы, получать НОВЫЙ ОПЫТ И говорить о современном искусстве.
-        .modules__button: a(href='#') ПОДРОБНЕЕ
-    .modules__item
-      .modules__image(style='background-image: url(images/02.jpg)'): span Искусство в эпоху постмодерна
-      .modules__content: .modules__inner
-        p Наш модуль "Искусство в эпоху постмодерна" познакомит вас с новейшими практиками и формами современного искусства и месте зрителя в его системе. В рамках системообразующего курса «Постмодернистское искусство» больше узнаем об  стории понятия и затронем проблематику новейших дилософфских течений. Мы узнаем, на чем следует делать упор, чтобы быть актуальным и важным  еждународным художником в эпоху глобализации и смешения.
-        .modules__button: a(href='#') ПОДРОБНЕЕ
-    .modules__item
-      .modules__image(style='background-image: url(images/03.jpg)'): span Медиумспецифичность#[br]или мультимедиальность?
-      .modules__content: .modules__inner
-        p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
-        .modules__button: a(href='#') ПОДРОБНЕЕ
-    .modules__item
-      .modules__image(style='background-image: url(images/03.jpg)'): span Медиумспецифичность#[br]или мультимедиальность?
-      .modules__content: .modules__inner
-        p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
-        .modules__button: a(href='#') ПОДРОБНЕЕ
-  .modules__more
-    button ЕЩЕ
+.modules
+  h2.modules__title #[b мод]ули
+  .cWide
+    .modules__top
+
+      h2.modules__header
+        | УЗНАЙ ВСЕ#[br]
+        | О СОВРЕМЕННОМ#[br]
+        | ИСКУССТВЕ
+        .modules__decor.paroller
+      .modules__text Наши образовательные модули построены таким образом, что дают полное   редставление о той или иной тенденции в художественной практике, а также помогают ответить на вопрос «что такое современное искусство». Вы узнаете о  ультимедиальности и интердисциплинарности, новейших практиках кураторства, а также о важнейших трендах в области художественного образования.
+    .modules__items
+      .modules__item
+        .modules__image(style='background-image: url(images/01.jpg)'): span Ваши лучшие 15
+        .modules__content: .modules__inner
+          p Мы собрали и структурировали модуль “Ваши лучшие 15" таким образом, чтобы студенты, прошедшие его, были полностью готовы к важнейшему шагу в своей жизни — выбору профессии — который будет предопределять всю их дальнейшую жизнь. Найти дело и занятие по душе — залог насыщенной и продуктивной деятельности, которая станет основой успешной карьеры и интересной жизни. В рамках занятий мы создадим общую творческую и интеллектуальную среду, где будем обсуждать проекты, задавать вопросы, получать НОВЫЙ ОПЫТ И говорить о современном искусстве.
+          .modules__button: a(href='#') ПОДРОБНЕЕ
+      .modules__item
+        .modules__image(style='background-image: url(images/02.jpg)'): span Искусство в эпоху постмодерна
+        .modules__content: .modules__inner
+          p Наш модуль "Искусство в эпоху постмодерна" познакомит вас с новейшими практиками и формами современного искусства и месте зрителя в его системе. В рамках системообразующего курса «Постмодернистское искусство» больше узнаем об  стории понятия и затронем проблематику новейших дилософфских течений. Мы узнаем, на чем следует делать упор, чтобы быть актуальным и важным  еждународным художником в эпоху глобализации и смешения.
+          .modules__button: a(href='#') ПОДРОБНЕЕ
+      .modules__item
+        .modules__image(style='background-image: url(images/03.jpg)'): span Медиумспецифичность#[br]или мультимедиальность?
+        .modules__content: .modules__inner
+          p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
+          .modules__button: a(href='#') ПОДРОБНЕЕ
+      .modules__item
+        .modules__image(style='background-image: url(images/03.jpg)'): span Медиумспецифичность#[br]или мультимедиальность?
+        .modules__content: .modules__inner
+          p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
+          .modules__button: a(href='#') ПОДРОБНЕЕ
+    .modules__more
+      button ЕЩЕ
