--- a/src/style.styl
+++ b/src/style.styl
@@ -51,5 +51,6 @@
 @import "modules/history/history.styl";
 @import "modules/students/students.styl";
 @import "modules/yearPrograms/yearPrograms.styl";
+@import "modules/blogs/blogs.styl";
 
 @import "stylus/blocks/wpcf7.styl";
