--- a/src/stylus/blocks/common.styl
+++ b/src/stylus/blocks/common.styl
@@ -32,12 +32,11 @@ html, body
   padding: 0 20px
   width: 100%
 
-
 .c
-  margin-left: auto
-  margin-right: auto
+  margin-left: auto;
+  margin-right: auto;
   max-width: $container-md
-  width: 100%
+  width: 100%;
   //+media('lg')
   //  max-width: $container-md
   +media('md')
@@ -73,6 +72,9 @@ img[data-srcset]
 
 .center
   text-align: center;
+
+.right
+  text-align: right;
 
 .small
   font-size: .85rem
@@ -332,30 +334,34 @@ img[data-srcset]
   &__item
     visibility: hidden;
     width: 20%
-    padding: 0 15px 15px 0
-    @media screen and (max-width: 1550px)
-      width: 25%
-    @media screen and (max-width: 1250px)
-      width: 33.3333%
+    padding: 0 15px 28% 0
+    position: relative;
+    //@media screen and (max-width: 1550px)
+    //  width: 25%
+    //@media screen and (max-width: 1250px)
+    //  width: 33.3333%
     +media('md')
       width: 100%
       padding: 0 0 5px
 
   &__card
-    width: 100%
-    height: 537px
+    position: absolute;
+    left: 0
+    top: 0
+    right: 15px
+    bottom: 15px
     display: flex;
     align-items flex-end
     padding: 20px
     color: #ffffff
-    font-size: 30px
+    font-size: 2vw
     line-height: 1.1
     font-weight: bold;
     text-decoration: none;
     hyphens: auto;
     overflow: hidden;
-    position: relative;
     +media('md')
+      position: relative;
       padding: 16px 19px
       height: 420px
       font-size: 28px
@@ -374,3 +380,11 @@ img[data-srcset]
     background-size: cover;
     z-index: -1
     anim(.3s)
+
+.page
+  padding: 0 0 120px 0
+  +media('md')
+    padding: 0 0 60px 0
+
+.animated > *
+  visibility: hidden;
