--- a/src/stylus/blocks/typography.styl
+++ b/src/stylus/blocks/typography.styl
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6
   letter-spacing 0
+  //margin: .75em
   line-height: 1.25
   font-weight: bold;
 
@@ -77,7 +78,7 @@ ul, ol
       margin-bottom: .75em
 
 ul
-  list-style disk
+  list-style disc
   padding-left: 1.55em
 
 ol
@@ -136,59 +137,86 @@ hr
 
 .title
   visibility: hidden;
-  position: relative;
-  font-size: 60px
-  line-height: 80px
-  font-weight: bold;
-  color: #ffffff
-  margin-bottom: 115px;
-  margin-top: -5px
-  +media('md')
-    margin-top: -3px
+  margin-left: -7vw
+  color: #ec3434;
+  //font-size: 220px;
+  font-size: 11vw;
+  line-height: .82
+  font-weight: normal;
+  z-index: 2;
+  margin-top: -80px
+  margin-bottom: 80px
+  //max-width calc(50% + 7vw - 50px)
+  hyphens: auto;
+
+  +media-max-width(1750px)
     margin-left: 0
-    font-size: 30px
-    line-height: 44px
+    margin-top: -60px
+    font-size: 10vw
+  //max-width calc(50% - 50px)
+
+  +media('md')
+    margin-top: -20px
+    //margin-top: -150px
     margin-bottom: 50px
+    font-size: 75px
+    max-width 100%
 
-  &:before, &:after
-    content: ''
-    position: absolute;
-
-  &:after
-    right: 100%
-    top: 3px
-    height: 100%
-    width: 1000px
-    background: repeating-linear-gradient(#1a1616 0px, #1a1616 73px, transparent 73px, transparent 80px)
-    z-index: -1
-    +media('md')
-      background: repeating-linear-gradient(#1a1616 0px, #1a1616 37px, transparent 37px, transparent 44px)
-
-  // Красная полоса
-
-  &:before
-    background: #ec3434
-
-  & > span
-    background: $black
-    position: relative;
-    box-shadow (-18px 0 0 0 $black) , 18px 0 0 0 $black;
-
-    & > span
-      position: relative;
-      z-index: 1;
-
-    &:before, &:after
-      content: ''
-      position: absolute;
-
-    // Красный круг
-
-    &:after
-      background: #ec3434
-      border-radius: 50%
-
-    // Черная полоска
-
-    &:before
-      background: #1a1616;
+//.title
+//  visibility: hidden;
+//  position: relative;
+//  font-size: 60px
+//  line-height: 80px
+//  font-weight: bold;
+//  color: #ffffff
+//  margin-bottom: 115px;
+//  margin-top: -5px
+//  +media('md')
+//    margin-top: -3px
+//    margin-left: 0
+//    font-size: 30px
+//    line-height: 44px
+//    margin-bottom: 50px
+//
+//  &:before, &:after
+//    content: ''
+//    position: absolute;
+//
+//  &:after
+//    right: 100%
+//    top: 3px
+//    height: 100%
+//    width: 1000px
+//    background: repeating-linear-gradient(#1a1616 0px, #1a1616 73px, transparent 73px, transparent 80px)
+//    z-index: -1
+//    +media('md')
+//      background: repeating-linear-gradient(#1a1616 0px, #1a1616 37px, transparent 37px, transparent 44px)
+//
+//  // Красная полоса
+//
+//  &:before
+//    background: #ec3434
+//
+//  & > span
+//    background: $black
+//    position: relative;
+//    box-shadow (-18px 0 0 0 $black) , 18px 0 0 0 $black;
+//
+//    & > span
+//      position: relative;
+//      z-index: 1;
+//
+//    &:before, &:after
+//      content: ''
+//      position: absolute;
+//
+//    // Красный круг
+//
+//    &:after
+//      background: #ec3434
+//      border-radius: 50%
+//
+//    // Черная полоска
+//
+//    &:before
+//      background: #1a1616;
